--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.background{
+  background-image: radial-gradient(#ffffff 2.5px, transparent 2.5px,radial-gradient(#ffffff 3.4px));
+  background-size: 36px 36px;
+  background-position: 0 0 ,18px 18px;
+  background-color: #b1d2ff;
+  background-size:cover;
+  overflow-y: auto;
+}
+
+/* .spinner {
+  margin: 11.2px;
+  width:11.2px;
+  height:50px;
+  border-radius :11.2px;
+  background:conic-gradient(#0000 10%,#766DF4);
+  -webkit-mask:radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  animation:s3 1s infinite linear;
+}
+@keyframes s3 {to{transform: rotate(1turn)}} */
+.spinner {
+  width:50px;
+  height:50px;
+  border-radius:50%;
+  background:conic-gradient(#0000 10%,#766DF4);
+  -webkit-mask:radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  animation:s3 1s infinite linear;
+}
+@keyframes s3 {to{transform: rotate(1turn)}}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
